SERVER-35663 Remove clusterTime >= operationTime invariant